--- a/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
@@ -2034,16 +2034,16 @@
                           Height="16"
                           Margin="2"/>
         <Border x:Name="GlyphBorder"
-                Visibility="Hidden"
-                Height="22"
-                Width="22"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
                 Background="{aero10:SystemAliasResource Menu.PopupCheckBackground.Normal.Background}"
                 BorderBrush="{aero10:SystemAliasResource Menu.PopupCheckBackground.Normal.Border}"
                 BorderThickness="1"
+                Width="22"
+                Height="22"
+                Margin="-1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
                 ClipToBounds="False"
-                Margin="-1">
+                Visibility="Hidden">
           <Path x:Name="Glyph"
                 Data="{StaticResource Menu.CheckmarkGlyph}"
                 FlowDirection="LeftToRight"
@@ -2056,7 +2056,6 @@
         </Border>
         <Border x:Name="MenuHeaderContainer"
                 Grid.Column="2"
-                Margin="0"
                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
           <ContentPresenter HorizontalAlignment="Left"
                             VerticalAlignment="Center"
@@ -2065,7 +2064,7 @@
                             Margin="{TemplateBinding Padding}"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
         </Border>
-        <Border x:Name="MenuGestureContainer" Grid.Column="4" Margin="0">
+        <Border x:Name="MenuGestureContainer" Grid.Column="4">
           <TextBlock Text="{TemplateBinding InputGestureText}"
                      Margin="{TemplateBinding Padding}"
                      VerticalAlignment="Center"/>
@@ -2098,12 +2097,10 @@
           <Condition Property="IsEnabled" Value="False"/>
           <Condition Property="IsHighlighted" Value="True"/>
         </MultiTrigger.Conditions>
-        <MultiTrigger.Setters>
-          <Setter TargetName="TemplateRoot" Property="Background"
+        <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{aero10:SystemAliasResource Menu.PopupItem.DisabledHot.Background}"/>
-          <Setter TargetName="TemplateRoot" Property="BorderBrush"
+        <Setter TargetName="TemplateRoot" Property="BorderBrush"
                 Value="{aero10:SystemAliasResource Menu.PopupItem.DisabledHot.Border}"/>
-        </MultiTrigger.Setters>
       </MultiTrigger>
       <Trigger Property="IsEnabled" Value="False">
         <Setter TargetName="TemplateRoot" Property="TextElement.Foreground"
@@ -2139,29 +2136,33 @@
                           ContentSource="Icon"
                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                           VerticalAlignment="Center"
-                          HorizontalAlignment="Center"
+                          HorizontalAlignment="Left"
                           Width="16"
                           Height="16"
                           Margin="2"/>
         <Border x:Name="GlyphBorder"
+                Background="{aero10:SystemAliasResource Menu.PopupCheckBackground.Normal.Background}"
+                BorderBrush="{aero10:SystemAliasResource Menu.PopupCheckBackground.Normal.Border}"
                 BorderThickness="1"
-                Height="22"
                 Width="22"
-                Visibility="Hidden"
+                Height="22"
+                Margin="-1"
+                HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                Margin="-1,-1,-1,-1"
-                BorderBrush="{aero10:SystemAliasResource Menu.PopupItem.Hot.Border}"
-                Background="{aero10:SystemAliasResource Menu.PopupItem.Hot.Background}">
+                ClipToBounds="False"
+                Visibility="Hidden">
           <Path x:Name="Glyph"
                 Data="{StaticResource Menu.CheckmarkGlyph}"
                 FlowDirection="LeftToRight"
                 Height="16"
                 Width="16"
+                Margin="2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
                 Fill="{aero10:SystemAliasResource Menu.PopupCheck.Normal.Foreground}"/>
         </Border>
         <Border x:Name="MenuHeaderContainer"
                 Grid.Column="2"
-                Margin="0,-1,0,0"
                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
           <ContentPresenter HorizontalAlignment="Left"
                             VerticalAlignment="Center"
@@ -2170,7 +2171,7 @@
                             Margin="{TemplateBinding Padding}"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
         </Border>
-        <Border x:Name="MenuGestureContainer" Grid.Column="4" Margin="0,-1,0,0">
+        <Border x:Name="MenuGestureContainer" Grid.Column="4">
           <TextBlock Text="{TemplateBinding InputGestureText}"
                      Margin="{TemplateBinding Padding}"
                      VerticalAlignment="Center"/>
@@ -2225,9 +2226,6 @@
         <Setter TargetName="MenuHeaderContainer" Property="Margin" Value="0,-1,0,0"/>
         <Setter TargetName="MenuGestureContainer" Property="Margin" Value="0,-1,0,0"/>
       </DataTrigger>
-      <Trigger Property="IsSuspendingPopupAnimation" Value="True">
-        <Setter TargetName="PART_Popup" Property="PopupAnimation" Value="None"/>
-      </Trigger>
       <Trigger Property="Icon" Value="{x:Null}">
         <Setter TargetName="Icon" Property="Visibility" Value="Collapsed"/>
       </Trigger>
@@ -2243,18 +2241,10 @@
         <Setter TargetName="TemplateRoot" Property="TextElement.Foreground"
                 Value="{aero10:SystemAliasResource Menu.PopupItem.Hot.Foreground}"/>
       </Trigger>
-      <Trigger Property="IsEnabled" Value="False">
-        <Setter TargetName="TemplateRoot" Property="TextElement.Foreground"
-                Value="{aero10:SystemAliasResource Menu.PopupItem.Disabled.Foreground}"/>
-        <Setter TargetName="Glyph" Property="Fill"
-                Value="{aero10:SystemAliasResource Menu.PopupCheck.Disabled.Foreground}"/>
-        <Setter TargetName="RightArrow" Property="Fill"
-                Value="{aero10:SystemAliasResource Menu.PopupSubmenu.Disabled.Foreground}"/>
-      </Trigger>
       <MultiTrigger>
         <MultiTrigger.Conditions>
-          <Condition Property="IsHighlighted" Value="True"/>
           <Condition Property="IsEnabled" Value="False"/>
+          <Condition Property="IsHighlighted" Value="True"/>
         </MultiTrigger.Conditions>
         <Setter TargetName="TemplateRoot" Property="Background"
                 Value="{aero10:SystemAliasResource Menu.PopupItem.DisabledHot.Background}"/>
@@ -2263,9 +2253,24 @@
         <Setter TargetName="TemplateRoot" Property="TextElement.Foreground"
                 Value="{aero10:SystemAliasResource Menu.PopupItem.DisabledHot.Foreground}"/>
       </MultiTrigger>
-      <Trigger SourceName="PART_Popup" Property="Popup.HasDropShadow" Value="True">
+      <Trigger Property="IsSuspendingPopupAnimation" Value="True">
+        <Setter TargetName="PART_Popup" Property="PopupAnimation" Value="None"/>
+      </Trigger>
+      <Trigger SourceName="PART_Popup" Property="HasDropShadow" Value="True">
         <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5"/>
         <Setter TargetName="Shdw" Property="Color" Value="#71000000"/>
+      </Trigger>
+      <Trigger Property="IsEnabled" Value="False">
+        <Setter TargetName="TemplateRoot" Property="TextElement.Foreground"
+                Value="{aero10:SystemAliasResource Menu.PopupItem.Disabled.Foreground}"/>
+        <Setter TargetName="Glyph" Property="Fill"
+                Value="{aero10:SystemAliasResource Menu.PopupCheck.Disabled.Foreground}"/>
+        <Setter TargetName="GlyphBorder" Property="Background"
+                Value="{aero10:SystemAliasResource Menu.PopupCheckBackground.Disabled.Background}"/>
+        <Setter TargetName="GlyphBorder" Property="BorderBrush"
+                Value="{aero10:SystemAliasResource Menu.PopupCheckBackground.Disabled.Border}"/>
+        <Setter TargetName="RightArrow" Property="Fill"
+                Value="{aero10:SystemAliasResource Menu.PopupSubmenu.Disabled.Foreground}"/>
       </Trigger>
     </ControlTemplate.Triggers>
   </ControlTemplate>
