--- a/Source/ThemePreviewer/Samples/GroupBoxSampleWpf.xaml
+++ b/Source/ThemePreviewer/Samples/GroupBoxSampleWpf.xaml
@@ -14,6 +14,8 @@
     <GroupBox Margin="3" Header="Disabled" Width="200" Height="50" HorizontalAlignment="Left" IsEnabled="False">
       <Button Content="Button"/>
     </GroupBox>
+    <GroupBox Margin="3" Header="Normal" Width="300" Height="100" HorizontalAlignment="Left" FontSize="48pt" TextOptions.TextFormattingMode="Ideal">
+    </GroupBox>
     <GroupBox Margin="3" Header="Filled" Width="200" HorizontalAlignment="Left">
       <Rectangle Fill="Blue" Height="30"/>
     </GroupBox>
