--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
@@ -4381,14 +4381,16 @@
                           Placement="Left"
                           Visibility="Collapsed"
                           Margin="5,0,0,0"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <aero10:TickBarEx x:Name="BottomTick"
                           Grid.Column="2"
                           Width="4"
                           Placement="Right"
                           Visibility="Collapsed"
                           Margin="0,0,5,0"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
         <Border x:Name="TrackBackground"
                 Grid.Column="1"
                 BorderThickness="1"
