--- a/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.HighContrast.Win10/Themes/HighContrast.Win10.NormalColor.xaml
@@ -4269,14 +4269,16 @@
                           Placement="Left"
                           Visibility="Collapsed"
                           Margin="5,0,0,0"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{TemplateBinding Foreground}"/>
         <aero10:TickBarEx x:Name="BottomTick"
                           Grid.Column="2"
                           Width="4"
                           Placement="Right"
                           Visibility="Collapsed"
                           Margin="0,0,5,0"
-                          Fill="{TemplateBinding Foreground}"/>
+                          Fill="{TemplateBinding Foreground}"
+                          SelectionTickBrush="{TemplateBinding Foreground}"/>
         <Border x:Name="TrackBackground"
                 Grid.Column="1"
                 BorderThickness="1"
