Support themes for third-party control libraries
Introduces a new advanced mode that hooks the internal lazy resource
loading so it can be applied to all theme resources without proactively
setting theme resources.

--- a/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
@@ -276,6 +276,22 @@
   <Style TargetType="{x:Type TextBox}"
          BasedOn="{StaticResource {x:Type TextBoxBase}}"/>
 
+  <Style TargetType="{x:Type Hyperlink}">
+    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}"/>
+    <Setter Property="TextDecorations" Value="Underline"/>
+    <Style.Triggers>
+      <Trigger Property="IsMouseOver" Value="True">
+        <Setter Property="Foreground" Value="Red"/>
+      </Trigger>
+      <Trigger Property="IsEnabled" Value="True">
+        <Setter Property="Cursor" Value="Hand"/>
+      </Trigger>
+      <Trigger Property="IsEnabled" Value="False">
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+      </Trigger>
+    </Style.Triggers>
+  </Style>
+
   <Style TargetType="{x:Type RichTextBox}"
            BasedOn="{StaticResource {x:Type TextBoxBase}}">
     <Style.Resources>
